# AaDS_lab2

./: CMakeLists.txt  README.md
app/: main.cpp
include/: list.cpp  polynomial.cpp  summand.cpp
